[project]
name = "decisify"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sharabh Shukla", email = "shuklasharabh@gmail.com" }
]
dependencies = [
    "pydantic>=2.10.1",
    "crewai>=0.80.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/decisify"]
