[project]
name = "decisify"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sharabh Shukla", email = "shuklasharabh@gmail.com" }
]
dependencies = [
    "pydantic>=2.10.1",
    "crewai>=0.80.0",
    "gurobipy>=12.0.0",
    "magentic>=0.32.0",
    "modelsmith>=0.6.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/decisify"]
